--- a/homestyles.css
+++ b/homestyles.css
@@ -1,23 +1,47 @@
 body {
     background: url(jpg/homeback.jpg);
+    /* 215em for bottom */
+     /* background-position: 1em 215em;  */
     background-size: 100%;
     background-repeat: no-repeat;
     font-family: 'Arial', sans-serif;
+    /* border-radius: 5em; */
+    /* position: relative; */
+}
+/* body img{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+} */
+
+
+
+/* 
+/* #header { */
+    /* background-color: #fbfbfb; */
+    /* background: url(jpg/homeback.jpg);
+    background-size: 100%; */
+    /* background-repeat: no-repeat; */
+    /* margin: auto; */
+    /* width: auto;
+    height: auto; */
+    /* position: relative; */
+    /* border-radius: 1rem; */
+    /* z-index: 1; */
+/* } */
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-/* #header {
-    padding: 0%;
-    margin: 0%;
-    background-color: #fbfbfb;
-    background: url(jpg/homeback.jpg);
-    background-size: 92%;
-    margin: auto;
-    width: 100%;
-    height: 85vh;
-    position: relative;
-    border-radius: 1rem;
-    z-index: 1;
-} */
+.greeting {
+    text-align: left;
+}
 
 nav {
     display: flex;
@@ -29,9 +53,10 @@ nav {
     align-items: center;
     width: max-content;
     height: max-content;
-    margin: 2em 5em 2em 1em;
-    border-radius: 1rem;
+    /* margin: 1em 1em 1em 1em; */
+    border-radius: 5px;
 
+    font-weight:bolder;
 }
 
 nav a {
@@ -39,13 +64,16 @@ nav a {
     display: block;
     /* color: rgb(0, 0, 0); */
     text-align: center;
-    padding: 1em 4em;
+    padding: 2em 3em;
+    margin: 0em 0em 1em 0em;
     text-decoration: none;
+    /* margin: 0 1px; */
 }
 
 nav a:hover {
-    opacity: .8;
-    /* color: black; */
+    opacity:2;
+    color: rgb(255, 0, 0);
+    background-color: #d1d1d19e;
 }
 
 #link-font {
@@ -66,12 +94,14 @@ nav a:hover {
 }
 
 .container {
+    
     display: flex;
     align-items: center;
     justify-content: space-around;
     /* max-width: 1200px; */
     margin: 0 auto;
-    padding: 50em 10em 10em 1em;
+    padding: 60em 10em 10em 1em;
+    /* background-color: #f2dede; */
 }
 
 .content {
@@ -88,6 +118,7 @@ nav a:hover {
 
 
 .video-container {
+    
     /* max-width: 800px; */
     margin: 1em auto;
 }
@@ -105,10 +136,11 @@ iframe {
 
 
 #animals {
+    background: linear-gradient(to right, #1fa2ff, #12d8fa, #a6ffcb);
     display: flex;
     justify-content: space-around;
-    padding: 10em 10em 1em 1em;
-    margin: 20px 0;
+    padding: 5em 10em 1em 1em;
+    margin: 1em 1em 5em 1em;
 }
 
 .animal {
@@ -142,44 +174,8 @@ h2{
     border-radius:10px;
 
 } */
-.subtopics {
-    background-color: rgba(185, 125, 125, 0.55);
-    text-align: center;
-    width: 14%;
-    border-radius: 10px;
-    margin-left: 4%;
-}
-
-.subtopics ul {
-    list-style: none;
-    margin-right: 70px;
-    margin-left: 15px;
-}
-
-.subtopics li {
-    line-height: 30px;
-
-}
-
-.subtopics a {
-    text-decoration: none;
-    color: rgb(92, 92, 92);
-}
-
-.subtopics a:hover {
-    text-decoration: underline;
-    background-color: rgba(187, 97, 97, 0.8);
-    color: rgb(58, 52, 52);
-    padding: 2px;
-    border-radius: 10%;
-}
-
-.paragraph {
-    background-color: rgba(185, 125, 125, 0.55);
-    width: 30%;
-}
-
 form {
+    
     max-width: 400px;
     margin: 0 auto;
     background-color: #fff;
@@ -238,14 +234,24 @@ button:hover {
 
 
 footer {
-    text-align: center;
-    padding: auto;
-    background-color: #3498db;
-    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-color: rgb(209, 209, 209);
+    margin-top: 8em;
 }
 
-#contact {
-    display: block;
-    padding: auto;
-    margin: 1em 1em 5em 70em;
+#aboutwebsite {
+    display: flex;
+    text-align: left;
+}
+
+#social-media, #contact {
+    margin-left: 20px; /* Adjust as needed */
+}
+
+#social-media img, #contact img {
+    width: 20px; /* Adjust as needed */
+    height: 20px; /* Adjust as needed */
 }
