--- a/homestyles.css
+++ b/homestyles.css
@@ -40,7 +40,9 @@ body {
 }
 
 .greeting {
-    text-align: left;
+    text-align: right;
+    /* padding: 0 auto; */
+    margin: 1em 1em 2em 29em;
 }
 
 nav {
@@ -91,6 +93,7 @@ nav a:hover {
     padding: 8em 1em 4em 10em;
     font-size: 150%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
 }
 
 .container {
@@ -99,16 +102,16 @@ nav a:hover {
     align-items: center;
     justify-content: space-around;
     /* max-width: 1200px; */
-    margin: 0 auto;
-    padding: 60em 10em 10em 1em;
-    /* background-color: #f2dede; */
+    margin: 41em 1em 1em 1em;
+    padding: 1em 1em 1em 1em;
+    background-color: #f2dede;
 }
 
 .content {
     font-size: 150%;
     flex: 1;
     max-width: 1200px;
-    margin: 1em 1em 1em 10em;
+    margin: 1em 1em 1em 5em;
 }
 
 .gif-container {
@@ -120,7 +123,7 @@ nav a:hover {
 .video-container {
     
     /* max-width: 800px; */
-    margin: 1em auto;
+    margin: 5em 1em 5em 1em;
 }
 
 .video-container h2 {
