--- a/homestyles.css
+++ b/homestyles.css
@@ -1,53 +1,18 @@
 body {
-    background: url(jpg/homeback.jpg);
-    /* 215em for bottom */
-     /* background-position: 1em 215em;  */
-    background-size: 100%;
-    background-repeat: no-repeat;
     font-family: 'Arial', sans-serif;
-    /* border-radius: 5em; */
-    /* position: relative; */
-}
-/* body img{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-} */
-
-
-
-/* 
-/* #header { */
-    /* background-color: #fbfbfb; */
-    /* background: url(jpg/homeback.jpg);
-    background-size: 100%; */
-    /* background-repeat: no-repeat; */
-    /* margin: auto; */
-    /* width: auto;
-    height: auto; */
-    /* position: relative; */
-    /* border-radius: 1rem; */
-    /* z-index: 1; */
-/* } */
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 
 .greeting {
     text-align: right;
-    /* padding: 0 auto; */
     margin: 1em 1em 2em 29em;
 }
 
 nav {
+    background: url(jpg/logo.png);
+    background-size: 2%;
+    background-repeat: no-repeat;
+    background-position: 1em 1em;
     display: flex;
-    /* background-color: #dbdada; */
     overflow: hidden;
     padding: auto;
     flex-direction: row;
@@ -55,27 +20,23 @@ nav {
     align-items: center;
     width: max-content;
     height: max-content;
-    /* margin: 1em 1em 1em 1em; */
-    border-radius: 5px;
-
-    font-weight:bolder;
+    border-radius: 1em;
+    font-weight: bolder;
 }
 
 nav a {
     float: left;
     display: block;
-    /* color: rgb(0, 0, 0); */
     text-align: center;
     padding: 2em 3em;
-    margin: 0em 0em 1em 0em;
+    margin-bottom: 1em ;
     text-decoration: none;
-    /* margin: 0 1px; */
 }
 
 nav a:hover {
-    opacity:2;
+    opacity: 2;
     color: rgb(255, 0, 0);
-    background-color: #d1d1d19e;
+    background-color: #d1d1d1cd;
 }
 
 #link-font {
@@ -93,148 +54,8 @@ nav a:hover {
     padding: 8em 1em 4em 10em;
     font-size: 150%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    
-}
-
-.container {
-    
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    /* max-width: 1200px; */
-    margin: 41em 1em 1em 1em;
-    padding: 1em 1em 1em 1em;
-    background-color: #f2dede;
-}
-
-.content {
-    font-size: 150%;
-    flex: 1;
-    max-width: 1200px;
-    margin: 1em 1em 1em 5em;
-}
-
-.gif-container {
-    flex: 1;
-    text-align: center;
-}
-
-
-.video-container {
-    
-    /* max-width: 800px; */
-    margin: 5em 1em 5em 1em;
-}
-
-.video-container h2 {
-    color: #333;
-    text-align: center;
 
 }
-
-iframe {
-    display: block;
-    margin: 20px auto;
-}
-
-
-#animals {
-    background: linear-gradient(to right, #1fa2ff, #12d8fa, #a6ffcb);
-    display: flex;
-    justify-content: space-around;
-    padding: 5em 10em 1em 1em;
-    margin: 1em 1em 5em 1em;
-}
-
-.animal {
-    width: 200px;
-    text-align: center;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 10px;
-    margin: 10px;
-}
-
-.animal img {
-    width: 100%;
-    height: auto;
-}
-
-/* h3{
-    text-align:center;
-    background-color:rgba(82, 32, 32, 0.55);
-    width:65%;
-    padding:1%;
-    margin-left:16%;
-    border-radius:10px;
-}
-h2{
-    text-align:center;
-    background-color:rgba(87, 38, 38, 0.65);
-    width:80%;
-    padding:2%;
-    margin-left:8%;
-    border-radius:10px;
-
-} */
-form {
-    
-    max-width: 400px;
-    margin: 0 auto;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.463);
-}
-
-label {
-    font-weight: bold;
-    display: block;
-    margin-bottom: 8px;
-}
-
-input {
-    width: 100%;
-    padding: 10px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-button {
-    background-color: #333;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    padding: 12px;
-    border-radius: 4px;
-    width: 100%;
-    transition: background-color 0.3s;
-}
-
-button:hover {
-    background-color: #555;
-}
-
-.confirmation, .error {
-    margin-top: 16px;
-    padding: 12px;
-    text-align: center;
-    border-radius: 4px;
-}
-
-.confirmation {
-    background-color: #dff0d8;
-    color: #3c763d;
-}
-
-.error {
-    background-color: #f2dede;
-    color: #a94442;
-}
-
-
 
 footer {
     display: flex;
@@ -251,10 +72,347 @@ footer {
 }
 
 #social-media, #contact {
-    margin-left: 20px; /* Adjust as needed */
+    margin-left: 20px;
 }
 
 #social-media img, #contact img {
-    width: 20px; /* Adjust as needed */
-    height: 20px; /* Adjust as needed */
+    width: 20px;
+    height: 20px;
+}
+
+
+
+
+
+
+/* css for home page */
+#Home-header {
+
+    background: url(jpg/homeback.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    margin: auto;
+    width: auto;
+    height: auto;
+    position: relative;
+    border-radius: 1rem;
+    padding-bottom: 40em;
+}
+
+
+
+/* css for home page */
+.container {
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: 1em 1em 1em 1em;
+    padding: 1em 1em 1em 1em;
+    background-color: #f2dede;
+}
+
+/* css for home page */
+.content {
+    font-size: 150%;
+    flex: 1;
+    max-width: 1200px;
+    margin: 1em 1em 1em 5em;
+}
+
+/* css for home page */
+.gif-container {
+    flex: 1;
+    text-align: center;
+}
+
+/* css for home page */
+.video-container {
+    margin: 5em 1em 5em 1em;
+}
+
+/* css for home page */
+.video-container h2 {
+    color: #333;
+    text-align: center;
+
+}
+
+/* css for home page */
+iframe {
+    display: block;
+    margin: 20px auto;
+}
+
+/* css for home page */
+form {
+
+    max-width: 400px;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.463);
+}
+
+/* css for home page */
+#formstuff {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 8px;
+}
+
+/* css for home page */
+input {
+    width: 100%;
+    padding: 10px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+/* css for home page */
+button {
+    background-color: #333;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    padding: 12px;
+    border-radius: 4px;
+    width: 100%;
+    transition: background-color 0.3s;
+}
+
+/* css for home page */
+button:hover {
+    background-color: #555;
+}
+
+/* css for home page */
+.confirmation, .error {
+    margin-top: 16px;
+    padding: 12px;
+    text-align: center;
+    border-radius: 4px;
+}
+
+/* css for home page */
+.confirmation {
+    background-color: #dff0d8;
+    color: #3c763d;
+}
+
+/* css for home page */
+.error {
+    background-color: #f2dede;
+    color: #a94442;
+}
+
+
+/*Here spacing is done for the sub-topic pages*/
+
+
+/* css for sub-topic pages */
+#background-dogs {
+    background-image: url('jpg/oscar-sutton-yihlaRCCvd4-unsplash.jpg');
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
+
+/* css for sub-topic pages */
+#sub-topic-title {
+    margin: auto;
+    padding: 5em 1em 4em 5em;
+    font-size: 150%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+/* css for sub-topic pages */
+#card {
+    font-size: 25px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+/* css for sub-topic pages */
+#sub-topic {
+    font-size: 22px;
+    line-height: 1.5;
+}
+
+/* css for sub-topic pages */
+.label-sub-topic {
+    font-size: 22px;
+    line-height: 1.5;
+    font-weight: bold;
+}
+
+/* css for sub-topic pages */
+.expandable {
+    font-size: 22px;
+    line-height: 1.5;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.4s ease-out;
+}
+
+/* css for sub-topic pages */
+.expanded {
+    max-height: 400px;
+}
+
+/* css for sub-topic pages */
+.arrow {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 19px;
+}
+
+/* css for sub-topic pages */
+.main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 5em;
+    padding: 20px;
+}
+
+/* css for sub-topic pages */
+.main img {
+    max-width: 100%;
+    height: auto;
+    max-height: 1000px;
+}
+
+/* css for sub-topic pages */
+.breed {
+    display: flex;
+    align-items: center;
+    margin: 2em 0;
+    background-color: rgba(255, 255, 255, 0.821);
+    padding: 20px;
+    border: 6px solid #808080;
+    border-radius: 30px;
+}
+
+/* css for sub-topic pages */
+.breed .image {
+    margin-right: 20px;
+    max-width: 40%;
+}
+
+/* css for sub-topic pages */
+.breed .description {
+    margin-left: 20px;
+    flex: 1;
+}
+
+
+
+
+#making-of{
+    display: flex;
+    position: absolute;
+    justify-content: space-between;
+    align-items: center;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 20px;
+    background-color: rgb(209, 209, 209);
+}
+#faboutwebsite {
+    float: left;
+
+}
+
+
+#fsocial-media, #fcontact {
+    margin-left: 20px;
+    /* Adjust as needed */
+}
+
+#fsocial-media img, #fcontact img {
+    width: 20px;
+    /* Adjust as needed */
+    height: 20px;
+    /* Adjust as needed */
+}
+
+.pics img {
+    float: right;
+    padding: 15px;
+    margin-right: 4%;
+    margin-top: 2px;
+    border-style: solid;
+    border-radius: 10px;
+    border-color: rgb(209, 209, 209);
+    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.15), -2px -2px 5px 1px rgba(0, 0, 0, 0.15);
+
+}
+
+.sec img {
+    margin-right: 10%;
+    margin-top: 10px;
+}
+
+/*dont touch acc at all*/
+.acc {
+    float: left;
+    margin-left: 0%;
+    width: 40%;
+}
+
+.acc li {
+    list-style: none;
+    width: 100%;
+    margin: 20px;
+    padding: 10px;
+    border-radius: 8px;
+    background: #ffffff;
+    box-shadow: 6px 6px 10px 2px rgba(0, 0, 0, 0.15), -6px -6px 10px 2px rgba(0, 0, 0, 0.15);
+}
+
+
+.acc li #la-making-of {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+#la-making-of::before {
+    content: '+';
+    margin-right: 10px;
+    font-size: 24px;
+    font-weight: 600px;
+}
+
+input[type="radio"] {
+    display: none;
+}
+
+.acc .content {
+    color: #555;
+    padding: 0 10px;
+    line-height: 26px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s, padding 0.5s;
+}
+
+.acc input[type="radio"]:checked+#la-making-of+.content {
+    max-height: 400px;
+    padding: 10px 10px 20px;
+}
+
+.acc input[type="radio"]:checked+#la-making-of::before {
+    content: '.';
+
 }
