--- a/makingoff.css
+++ b/makingoff.css
@@ -1,12 +1,14 @@
-head,body{
-    margin:0;
-    padding:0;
+head, body {
+    margin: 0;
+    padding: 0;
 }
+
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 nav {
     display: flex;
     /* background-color: #dbdada; */
@@ -20,7 +22,7 @@ nav {
     /* margin: 1em 1em 1em 1em; */
     border-radius: 5px;
 
-    font-weight:bolder;
+    font-weight: bolder;
 }
 
 nav a {
@@ -35,10 +37,11 @@ nav a {
 }
 
 nav a:hover {
-    opacity:2;
+    opacity: 2;
     color: rgb(255, 0, 0);
     background-color: #d1d1d19e;
 }
+
 #link-font {
     font-style: normal;
     font-weight: 400;
@@ -49,42 +52,112 @@ nav a:hover {
     text-decoration: none;
 }
 
-.para p{
-    margin-left:4%;
-    width:80%;
-    padding: 2.0em;
+
+/*for mohd: might need changes (margin) to suit the design */
+.pics img {
+    float: right;
+    padding: 15px;
+    margin-right: 4%;
+    margin-top: 2px;
     border-style: solid;
-    border-width: 6px;
-    border-color:rgb(209, 209, 209);
-    border-radius:10px;
+    border-radius: 10px;
+    border-color: rgb(209, 209, 209);
+    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.15), -2px -2px 5px 1px rgba(0, 0, 0, 0.15);
+
+}
+
+.sec img {
+    margin-right: 10%;
+    margin-top: 10px;
+}
+
+/*dont touch acc at all*/
+.acc {
+    float: left;
+    margin-left: 0%;
+    width: 40%;
+}
+
+.acc li {
+    list-style: none;
+    width: 100%;
+    margin: 20px;
+    padding: 10px;
+    border-radius: 8px;
+    background: #ffffff;
+    box-shadow: 6px 6px 10px 2px rgba(0, 0, 0, 0.15), -6px -6px 10px 2px rgba(0, 0, 0, 0.15);
+}
+
+
+.acc li label {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+label::before {
+    content: '+';
+    margin-right: 10px;
+    font-size: 24px;
+    font-weight: 600px;
+}
+
+input[type="radio"] {
+    display: none;
+}
+
+.acc .content {
+    color: #555;
+    padding: 0 10px;
+    line-height: 26px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s, padding 0.5s;
+}
+
+.acc input[type="radio"]:checked+label+.content {
+    max-height: 400px;
+    padding: 10px 10px 20px;
+}
+
+.acc input[type="radio"]:checked+label::before {
+    content: '.';
+
 }
 
 
 
-
+/*footer will stick to the bottom of the page / if you add alot of things to the point you can scroll it will look bad*/
 footer {
 
     display: flex;
+    position: absolute;
     justify-content: space-between;
     align-items: center;
+    left: 0;
+    right: 0;
+    bottom: 0;
     padding: 20px;
     background-color: rgb(209, 209, 209);
-    margin-top: 14%;
 }
 
-#aboutwebsite {
-    float:left;
-
-}
-#aboutwebsite p{
+#faboutwebsite {
+    float: left;
 
 }
 
-#social-media, #contact {
-    margin-left: 20px; /* Adjust as needed */
+
+#fsocial-media, #fcontact {
+    margin-left: 20px;
+    /* Adjust as needed */
 }
 
-#social-media img, #contact img {
-    width: 20px; /* Adjust as needed */
-    height: 20px; /* Adjust as needed */
+#fsocial-media img, #fcontact img {
+    width: 20px;
+    /* Adjust as needed */
+    height: 20px;
+    /* Adjust as needed */
 }
