--- a/homestyles.css
+++ b/homestyles.css
@@ -29,7 +29,7 @@ nav a {
     display: block;
     text-align: center;
     padding: 2em 3em;
-    margin-bottom: 1em ;
+    margin-bottom: 1em;
     text-decoration: none;
 }
 
@@ -215,18 +215,24 @@ button:hover {
 
 /* css for sub-topic pages */
 #background-dogs {
-    background-image: url('jpg/oscar-sutton-yihlaRCCvd4-unsplash.jpg');
+    background-image: url('jpg/unsplash.jpg');
     background-attachment: fixed;
     background-position: center;
-    background-size: cover;
+    background-size: 55%;
+    background-repeat: no-repeat;
 }
 
 /* css for sub-topic pages */
 #sub-topic-title {
+    color: #000000;
     margin: auto;
-    padding: 5em 1em 4em 5em;
+    padding: 5em 1em 4em 4em;
     font-size: 150%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+#dogs-title {
+    color: rgb(236, 102, 7);
 }
 
 /* css for sub-topic pages */
@@ -314,7 +320,7 @@ button:hover {
 
 
 
-#making-of{
+#making-of {
     display: flex;
     position: absolute;
     justify-content: space-between;
@@ -325,6 +331,7 @@ button:hover {
     padding: 20px;
     background-color: rgb(209, 209, 209);
 }
+
 #faboutwebsite {
     float: left;
 
@@ -415,4 +422,80 @@ input[type="radio"] {
 .acc input[type="radio"]:checked+#la-making-of::before {
     content: '.';
 
+}
+
+
+/*here is space for our story page*/
+/*css for our story page*/
+
+
+/*dont touch acc at all*/
+.acc-story {
+    float: left;
+    margin-left: 1%;
+    width: 90%;
+    text-align: center;
+}
+
+.acc-story li {
+    list-style: none;
+    width: 100%;
+    margin: 20px;
+    padding: 10px;
+    border-radius: 8px;
+    background: #ffffff;
+    box-shadow: 6px 6px 10px 2px rgba(0, 0, 0, 0.15), -6px -6px 10px 2px rgba(0, 0, 0, 0.15);
+}
+
+
+.acc-story li #label-story {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+#label-story::before {
+    content: '+';
+    margin-right: 10px;
+    font-size: 24px;
+    font-weight: 600px;
+}
+
+#p-story[type="radio"] {
+    display: none;
+}
+
+.acc-story .content-story {
+    color: #555;
+    padding: 0 10px;
+    line-height: 26px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s, padding 0.5s;
+}
+
+.acc-story input[type="radio"]:checked+#label-story+.content-story {
+    max-height: 400px;
+    padding: 10px 10px 20px;
+}
+
+.acc-story input[type="radio"]:checked+#label-story::before {
+    content: '.';
+
+}
+
+#footer-story {
+
+    display: flex;
+    position: fixed;
+    justify-content: space-between;
+    align-items: center;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 20px;
+    background-color: rgb(209, 209, 209);
 }
