--- a/ourstory.css
+++ b/ourstory.css
@@ -1,14 +1,12 @@
-head, body {
-    margin: 0;
-    padding: 0;
+head,body{
+    margin:0;
+    padding:0;
 }
-
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
 nav {
     display: flex;
     /* background-color: #dbdada; */
@@ -21,8 +19,7 @@ nav {
     height: max-content;
     /* margin: 1em 1em 1em 1em; */
     border-radius: 5px;
-
-    font-weight: bolder;
+    font-weight:bolder;
 }
 
 nav a {
@@ -37,11 +34,10 @@ nav a {
 }
 
 nav a:hover {
-    opacity: 2;
+    opacity:2;
     color: rgb(255, 0, 0);
     background-color: #d1d1d19e;
 }
-
 #link-font {
     font-style: normal;
     font-weight: 400;
@@ -54,31 +50,33 @@ nav a:hover {
 
 
 /*for mohd: might need changes (margin) to suit the design */
-.pics img {
-    float: right;
-    padding: 15px;
-    margin-right: 4%;
-    margin-top: 2px;
-    border-style: solid;
-    border-radius: 10px;
-    border-color: rgb(209, 209, 209);
+/* .pics img{
+    float:right;
+    padding:15px;
+    margin-right:4%;
+    margin-top:2px;   
+    border-style:solid;
+    border-radius:10px;
+    border-color:rgb(209, 209, 209);
     box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.15), -2px -2px 5px 1px rgba(0, 0, 0, 0.15);
 
 }
+.sec img{
+    margin-right:10%;
+    margin-top:10px;
+} */
 
-.sec img {
-    margin-right: 10%;
-    margin-top: 10px;
-}
+
 
 /*dont touch acc at all*/
-.acc {
-    float: left;
-    margin-left: 0%;
-    width: 40%;
-}
-
-.acc li {
+.acc-story {
+    float:left;
+    margin-left:1%;
+    width: 90%;
+    text-align: center;
+    }
+    
+.acc-story li{
     list-style: none;
     width: 100%;
     margin: 20px;
@@ -86,83 +84,74 @@ nav a:hover {
     border-radius: 8px;
     background: #ffffff;
     box-shadow: 6px 6px 10px 2px rgba(0, 0, 0, 0.15), -6px -6px 10px 2px rgba(0, 0, 0, 0.15);
-}
+    }
 
 
-.acc li label {
+.acc-story li #label-story{
     display: flex;
     align-items: center;
     padding: 10px;
     font-size: 18px;
     font-weight: 500;
     cursor: pointer;
-}
+    }
 
-label::before {
-    content: '+';
-    margin-right: 10px;
-    font-size: 24px;
-    font-weight: 600px;
-}
+#label-story::before{
+        content:'+';
+        margin-right: 10px;
+        font-size:24px;
+        font-weight:600px;
+    }
 
-input[type="radio"] {
-    display: none;
-}
+input[type="radio"]{
+        display:none;
+    }
 
-.acc .content {
-    color: #555;
-    padding: 0 10px;
-    line-height: 26px;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.5s, padding 0.5s;
-}
+.acc-story .content-story{
+        color: #555;
+        padding: 0 10px;
+        line-height:26px;
+        max-height:0;
+        overflow:hidden;
+        transition: max-height 0.5s,padding 0.5s;
+    }
 
-.acc input[type="radio"]:checked+label+.content {
-    max-height: 400px;
-    padding: 10px 10px 20px;
-}
-
-.acc input[type="radio"]:checked+label::before {
-    content: '.';
+.acc-story input[type="radio" ]:checked + #label-story + .content-story{
+        max-height: 400px;
+        padding: 10px 10px 20px;
+    }
+.acc-story input[type="radio" ]:checked + #label-story::before{
+    content:'.';
 
 }
 
 
 
 /*footer will stick to the bottom of the page / if you add alot of things to the point you can scroll it will look bad*/
-footer {
+#footer-story {
 
     display: flex;
-    position: absolute;
+    position:fixed;
     justify-content: space-between;
     align-items: center;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    left:0;
+    right:0;
+    bottom:0;
     padding: 20px;
     background-color: rgb(209, 209, 209);
 }
 
-#faboutwebsite {
-    float: left;
+#aboutwebsite {
+    float:left;
 
 }
 
 
-#fsocial-media, #fcontact {
-    margin-left: 20px;
-    /* Adjust as needed */
+#social-media, #contact {
+    margin-left: 20px; /* Adjust as needed */
 }
 
-#fsocial-media img, #fcontact img {
-    width: 20px;
-    /* Adjust as needed */
-    height: 20px;
-    /* Adjust as needed */
-}
-#header-story {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+#social-media img, #contact img {
+    width: 20px; /* Adjust as needed */
+    height: 20px; /* Adjust as needed */
 }
